@@ -1,4 +1,8 @@
-﻿drkns 13.12.2013 01:21:33 +0200 - build 3739
+﻿drkns 13.12.2013 09:23:31 +0200 - build 3740
+
+1. Уточнение 3738.
+
+drkns 13.12.2013 01:21:33 +0200 - build 3739
 
 1. VC10 fix.
 
